[gd_scene load_steps=7 format=3 uid="uid://b3p727tvn6smd"]

[ext_resource type="Script" uid="uid://18mob3xnn2be" path="res://scripts/trash.gd" id="1_exrr5"]
[ext_resource type="Texture2D" uid="uid://0r5b0xwc272e" path="res://assets/images/items/Trash_Closed.png" id="2_2cq4d"]
[ext_resource type="Texture2D" uid="uid://diegfgbrfdeve" path="res://assets/images/items/Shadow.png" id="2_24v10"]
[ext_resource type="Texture2D" uid="uid://b3vaaks370wdq" path="res://assets/images/items/Trash_Open.png" id="3_2cq4d"]
[ext_resource type="AudioStream" uid="uid://b7g31030x3kca" path="res://assets/sfx/splat_01.mp3" id="4_w6jqc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w6jqc"]
size = Vector2(296, 383)

[node name="Trash" type="Node2D"]
script = ExtResource("1_exrr5")

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(-2, 169.75)
scale = Vector2(0.597674, 1.42241)
texture = ExtResource("2_24v10")

[node name="Trash_Closed" type="Sprite2D" parent="."]
texture = ExtResource("2_2cq4d")

[node name="Trash_open" type="Sprite2D" parent="."]
visible = false
position = Vector2(0.685124, -5.9344)
scale = Vector2(-1.02933, 1.02198)
texture = ExtResource("3_2cq4d")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, 4.5)
shape = SubResource("RectangleShape2D_w6jqc")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_w6jqc")
bus = &"SFX"

[connection signal="area_entered" from="Area2D" to="." method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
